# tep-app

./: .gitignore  .prototools  README.md  biome.json  docker-compose.yml  package.json
.moon/: toolchain.yml  workspace.yml
.moon/tasks/: bun-frontend-library.yml  bun-library.yml  bun.yml  rust.yml  tag-docker.yml  tag-react-router.yml  tag-sea.yml
apps/celebry-server/: .env  .gitignore  cargo.toml  moon.yml
apps/celebry-server/migration/src/: lib.rs  m20251223_125421_create_venue.rs
apps/celebry-server/src/: main.rs
apps/celebry-server/src/utils/: db.rs
apps/celebry-web/: Dockerfile  README.md  moon.yml  package.json  tsconfig.json
apps/celebry-web/app/: routes.ts
apps/celebry-web/app/routes/: home.tsx  todos.tsx
apps/tep-server/: Cargo.toml  moon.yml
apps/tep-server/migration/: Cargo.toml
apps/tep-server/migration/src/: m20220101_000001_create_event.rs
apps/tep-web/: Dockerfile  README.md  moon.yml  package.json  tsconfig.json  vite.config.ts
apps/tep-web/app/: app.css  root.tsx
apps/tep-web/app/routes/: home.tsx
apps/tep-web/app/welcome/: welcome.tsx
docker/: docker-compose.postgres.yml
protos/: hello.proto
types/: tsconfig.base.json  tsconfig.react.json
