[dependencies]
migration = { path = "migration" }
dotenvy = "0.15.7"
tokio = "1.48.0"
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"]}

[workspaces]
members = [".", "migration"]

[package]
edition = "2024"
publish = false
name = "tep-server"
rust-version = "1.92.0"
version = "0.0.0"
